--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css');
 @import url('https://unpkg.com/mockman-js@latest/dist/style.css'); 
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('https://unpkg.com/mockman-js@latest/dist/style.css');
 
 html {
   scroll-behavior: smooth;
