--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Nunito:wght@200;400&display=swap');
 @import url('https://kube-ui.netlify.app/Components/kube-ui.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css');
-@import url('https://unpkg.com/mockman-js@latest/dist/style.css'); 
+/* @import url('https://unpkg.com/mockman-js@latest/dist/style.css');  */
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
-@import url('https://unpkg.com/mockman-js@latest/dist/style.css');
 
 html {
   scroll-behavior: smooth;
