--- a/src/component/search-bar/search-bar.css
+++ b/src/component/search-bar/search-bar.css
@@ -1,6 +1,6 @@
 .search-bar {
   flex-grow: 1;
-  position: relative;
+  /* position: relative; */
   background-color: var(--transparent-white);
 }
 .search-bar__btn {
