--- a/src/component/search-bar/search-bar.css
+++ b/src/component/search-bar/search-bar.css
@@ -19,3 +19,33 @@
 .search-bar-input:focus {
   border-bottom: 1px solid var(--dark-secondary-text-color);
 }
+.overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  visibility: hidden;
+  background-color: rgba(0,0,0,.562);
+  opacity: 0;
+  z-index: 4000;
+  transition: opacity 0.218s ease-in;
+}
+.modal-wrapper{
+  position: fixed;
+  z-index: 4001;
+  opacity: 0;
+  max-width: 400px;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.visible{
+  visibility: visible;
+  opacity: 1;
+}
+.show{
+  opacity: 1;
+  transition: top .13s;
+}
