css fix for filter modal

--- a/src/component/filter-modal/filter-modal.css
+++ b/src/component/filter-modal/filter-modal.css
@@ -11,6 +11,9 @@
   transform: translate(-50%, -50%);
   z-index: 4004;
 }
+.sort-wrapper{
+  gap: 1rem;
+}
 .clear-filter-btn{
   justify-content: flex-end;
 }
